feat(example-app): implement base example app functionality

--- a/example-app/src/global.css
+++ b/example-app/src/global.css
@@ -25,13 +25,15 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-/**
- * Ionic Dark Mode
- * -----------------------------------------------------
- * For more info, please see:
- * https://ionicframework.com/docs/theming/dark-mode
- */
+@import "tailwindcss";
 
-/* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+
+body.camera-running {
+  visibility: hidden;
+  --background: transparent;
+  --ion-background-color: transparent;
+}
+
+#cameraControls {
+  visibility: visible;
+}
