--- a/example-app/src/global.scss
+++ b/example-app/src/global.scss
@@ -25,15 +25,12 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-@import "tailwindcss";
-
-
 body.camera-running {
   visibility: hidden;
   --background: transparent;
   --ion-background-color: transparent;
 }
 
-#cameraControls {
+.camera-modal {
   visibility: visible;
 }
