--- a/example-app/src/app/components/camera-modal/camera-modal.component.scss
+++ b/example-app/src/app/components/camera-modal/camera-modal.component.scss
@@ -3,6 +3,42 @@
   width: 100vw;
 }
 
+.container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+// Camera elements
+#cameraView {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#webCamera {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(20, 20, 20);
+}
+
+// Loading state
+.loading-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// Toolbar and icons
 ion-toolbar {
   --background: transparent;
   --color: white;
@@ -12,69 +48,24 @@ ion-icon {
   color: white;
 }
 
-.loading-screen {
-  background-color: #333;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#cameraView {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#webCamera {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(20, 20, 20);
-}
-
+// Buttons
 ion-fab-button {
   --background: rgba(255, 255, 255, 0.5);
-  --background-activated: #rgba(255, 255, 255, 0.8);
-  --background-hover: #rgba(255, 255, 255, 0.8);
+  --background-activated: rgba(255, 255, 255, 0.8);
+  --background-hover: rgba(255, 255, 255, 0.8);
   color: black;
 }
 
 .camera-trigger {
   margin-bottom: var(--ion-safe-area-bottom, 0);
+
   ion-spinner {
     --color: black;
     color: black;
   }
 }
 
-ion-chip.barcode-detected {
-  --background: #dce358;
-  --color: black;
-
-  position: fixed;
-  bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: fadeInUp 0.5s ease-out forwards;
-  color: black;
-  ion-icon {
-    color: black;
-  }
-}
-
-.container {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-}
-
+// Barcode elements
 .barcode-rect {
   position: absolute;
   border: 2px solid #dce358;
@@ -84,6 +75,21 @@ ion-chip.barcode-detected {
   transition: 0.2s ease-out;
 }
 
+ion-chip.barcode-detected {
+  --background: #dce358;
+  --color: black;
+  position: fixed;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: fadeInUp 0.5s ease-out forwards;
+
+  ion-icon {
+    color: black;
+  }
+}
+
+// Animations
 @keyframes fadeInUp {
   from {
     opacity: 0;
