feat(web): finalize web support and implement barcode detection

--- a/example-app/src/app/components/camera-modal/camera-modal.component.scss
+++ b/example-app/src/app/components/camera-modal/camera-modal.component.scss
@@ -73,6 +73,7 @@ ion-fab-button {
   visibility: hidden;
   opacity: 0;
   transition: 0.2s ease-out;
+  background-color: #dce35875;
 }
 
 ion-chip.barcode-detected {
