docs(readme): finalize readme

--- a/example-app/src/app/pages/camera-view/camera-view.page.html
+++ b/example-app/src/app/pages/camera-view/camera-view.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Capacitor Camera View ♥</ion-title>
+    <ion-title>Capacitor Camera View</ion-title>
   </ion-toolbar>
 </ion-header>
 
