fix(ios): fix image orientation when device is rotated

--- a/example-app/src/global.scss
+++ b/example-app/src/global.scss
@@ -34,3 +34,12 @@ body.camera-running {
 .camera-modal {
   visibility: visible;
 }
+
+ion-modal {
+  --height: 100%;
+  --width: 100%;
+
+  ion-header ion-toolbar:first-of-type {
+    padding-top: env(safe-area-inset-top);
+  }
+}
