feat(*): add saveToFile option for photo capture
Add support for an optional saveToFile parameter (default: false) to the
capture and captureSample methods. When enabled, the photo is returned as a temporary
file URL instead of a base64-encoded string.

This reduces bridge I/O and improves performance when transferring high-resolution images
from native code to the WebView.

--- a/example-app/src/app/pages/camera-view/camera-view.page.html
+++ b/example-app/src/app/pages/camera-view/camera-view.page.html
@@ -86,6 +86,16 @@
         Enable Barcode Detection
       </ion-checkbox>
     </ion-item>
+
+    <ion-item>
+      <ion-checkbox
+        [(ngModel)]="saveToFile"
+        color="primary"
+        justify="space-between"
+      >
+        Save to File
+      </ion-checkbox>
+    </ion-item>
   </ion-list>
 
   <ion-button (click)="startCamera()" expand="block">
