--- a/example-app/src/app/pages/gallery/gallery.component.html
+++ b/example-app/src/app/pages/gallery/gallery.component.html
@@ -1,6 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Gallery</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="clearGallery()" fill="clear">
+        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
