--- a/example-app/src/app/components/camera-modal/camera-modal.component.html
+++ b/example-app/src/app/components/camera-modal/camera-modal.component.html
@@ -48,9 +48,9 @@
         @if (torchEnabled() && torchAvailable()) {
           <div style="line-height: 0.5; margin-top: -5px">
             <ion-icon name="flashlight-outline" size="small"></ion-icon><br />
-            <span style="font-size: 0.5rem"
-              >{{ (torchLevel() * 100).toFixed(0) }}%</span
-            >
+            <span style="font-size: 0.5rem">
+              {{ (torchLevel() * 100).toFixed(0) }}%
+            </span>
           </div>
         } @else {
           <ion-icon name="flashlight-outline" size="small"></ion-icon>
