feat(example-app): add selector for barcodeTypes

--- a/example-app/src/app/pages/camera-view/camera-view.page.html
+++ b/example-app/src/app/pages/camera-view/camera-view.page.html
@@ -89,6 +89,24 @@
       </ion-checkbox>
     </ion-item>
 
+    @if (enableBarcodeDetection()) {
+      <ion-item>
+        <ion-select
+          [(ngModel)]="barcodeTypes"
+          label="Barcode Types"
+          placeholder="Select barcode types to detect"
+          label-placement="floating"
+          multiple
+        >
+          @for (type of barcodeTypeOptions; track type.value) {
+            <ion-select-option value="{{ type.value }}">
+              {{ type.label }}
+            </ion-select-option>
+          }
+        </ion-select>
+      </ion-item>
+    }
+
     <ion-item>
       <ion-checkbox
         [(ngModel)]="saveToFile"
