--- a/example-app/src/app/components/camera-modal/camera-modal.component.html
+++ b/example-app/src/app/components/camera-modal/camera-modal.component.html
@@ -1,113 +1,107 @@
-<div class="container">
-  <ion-header class="ion-no-border">
-    <ion-toolbar>
-      <ion-title>Camera</ion-title>
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <ion-title>Camera</ion-title>
 
-      <ion-buttons slot="end">
-        <ion-button (click)="close()">
-          <ion-icon slot="icon-only" name="close"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
+    <ion-buttons slot="end">
+      <ion-button (click)="close()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 
-  <div id="cameraView">
-    @if (!cameraStarted()) {
-      <div class="loading-screen">
-        <ion-spinner color="white"></ion-spinner>
-      </div>
-    }
-  </div>
+<div id="cameraView">
+  @if (!cameraStarted()) {
+    <div class="loading-screen">
+      <ion-spinner color="white"></ion-spinner>
+    </div>
+  }
+</div>
 
-  @if (cameraStarted()) {
-    <ion-fab
-      class="camera-actions"
-      slot="fixed"
-      horizontal="end"
-      vertical="center"
+@if (cameraStarted()) {
+  <ion-fab
+    class="camera-actions"
+    slot="fixed"
+    horizontal="end"
+    vertical="center"
+  >
+    <ion-fab-button (click)="nextFlashMode()" size="small">
+      @let fm = flashMode();
+      @if (fm === "off") {
+        <ion-icon name="flash-off" size="small"></ion-icon>
+      } @else if (fm === "on") {
+        <ion-icon name="flash" size="small"></ion-icon>
+      } @else if (fm === "auto") {
+        <div style="line-height: 0.5; margin-top: -5px">
+          <ion-icon name="flash" size="small"></ion-icon><br />
+          <span style="font-size: 0.6rem">AUTO</span>
+        </div>
+      }
+    </ion-fab-button>
+
+    <ion-fab-button
+      (click)="toggleTorch()"
+      size="small"
+      [disabled]="!torchAvailable()"
     >
-      <ion-fab-button (click)="nextFlashMode()" size="small">
-        @let fm = flashMode();
-        @if (fm === "off") {
-          <ion-icon name="flash-off" size="small"></ion-icon>
-        } @else if (fm === "on") {
-          <ion-icon name="flash" size="small"></ion-icon>
-        } @else if (fm === "auto") {
-          <div style="line-height: 0.5; margin-top: -5px">
-            <ion-icon name="flash" size="small"></ion-icon><br />
-            <span style="font-size: 0.6rem">AUTO</span>
-          </div>
-        }
-      </ion-fab-button>
+      @if (torchEnabled() && torchAvailable()) {
+        <div style="line-height: 0.5; margin-top: -5px">
+          <ion-icon name="flashlight-outline" size="small"></ion-icon><br />
+          <span style="font-size: 0.5rem">
+            {{ (torchLevel() * 100).toFixed(0) }}%
+          </span>
+        </div>
+      } @else {
+        <ion-icon name="flashlight-outline" size="small"></ion-icon>
+      }
+    </ion-fab-button>
 
-      <ion-fab-button
-        (click)="toggleTorch()"
-        size="small"
-        [disabled]="!torchAvailable()"
-      >
-        @if (torchEnabled() && torchAvailable()) {
-          <div style="line-height: 0.5; margin-top: -5px">
-            <ion-icon name="flashlight-outline" size="small"></ion-icon><br />
-            <span style="font-size: 0.5rem">
-              {{ (torchLevel() * 100).toFixed(0) }}%
-            </span>
-          </div>
-        } @else {
-          <ion-icon name="flashlight-outline" size="small"></ion-icon>
-        }
-      </ion-fab-button>
+    <ion-fab-button size="small" (click)="flipCamera()">
+      <ion-icon name="camera-reverse"></ion-icon>
+    </ion-fab-button>
 
-      <ion-fab-button size="small" (click)="flipCamera()">
-        <ion-icon name="camera-reverse"></ion-icon>
-      </ion-fab-button>
+    <ion-fab-button [disabled]="!canZoomIn()" size="small" (click)="zoomIn()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
 
-      <ion-fab-button [disabled]="!canZoomIn()" size="small" (click)="zoomIn()">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
+    <ion-fab-button [disabled]="!canZoomOut()" size="small" (click)="zoomOut()">
+      <ion-icon name="remove"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
-      <ion-fab-button
-        [disabled]="!canZoomOut()"
-        size="small"
-        (click)="zoomOut()"
-      >
-        <ion-icon name="remove"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-
-    @if (detectedBarcode()) {
-      <ion-chip (click)="readBarcode()" class="barcode-detected">
-        <ion-icon name="qr-code-outline"></ion-icon>
-        <ion-label>Barcode</ion-label>
-        <ion-icon name="close-circle"></ion-icon>
-      </ion-chip>
-    }
-
-    <ion-fab
-      class="camera-trigger"
-      slot="fixed"
-      horizontal="center"
-      vertical="bottom"
-    >
-      <ion-fab-button (click)="capturePhoto()" [disabled]="isCapturingPhoto()">
-        @if (isCapturingPhoto()) {
-          <ion-spinner></ion-spinner>
-        } @else {
-          <ion-icon name="camera-outline"></ion-icon>
-        }
-      </ion-fab-button>
-    </ion-fab>
-
-    <ion-fab
-      class="capture-sample"
-      slot="fixed"
-      horizontal="end"
-      vertical="bottom"
-    >
-      <ion-fab-button (click)="captureSample()" size="small">
-        <ion-icon name="aperture"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+  @if (detectedBarcode()) {
+    <ion-chip (click)="readBarcode()" class="barcode-detected">
+      <ion-icon name="qr-code-outline"></ion-icon>
+      <ion-label>Barcode</ion-label>
+      <ion-icon name="close-circle"></ion-icon>
+    </ion-chip>
   }
 
-  <div #barcodeRect class="barcode-rect"></div>
-</div>
+  <ion-fab
+    class="camera-trigger"
+    slot="fixed"
+    horizontal="center"
+    vertical="bottom"
+  >
+    <ion-fab-button (click)="capturePhoto()" [disabled]="isCapturingPhoto()">
+      @if (isCapturingPhoto()) {
+        <ion-spinner></ion-spinner>
+      } @else {
+        <ion-icon name="camera-outline"></ion-icon>
+      }
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-fab
+    class="capture-sample"
+    slot="fixed"
+    horizontal="end"
+    vertical="bottom"
+  >
+    <ion-fab-button (click)="captureSample()" size="small">
+      <ion-icon name="aperture"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+}
+
+<div #barcodeRect class="barcode-rect"></div>
