--- a/example-app/src/app/pages/camera-view/camera-view.page.html
+++ b/example-app/src/app/pages/camera-view/camera-view.page.html
@@ -116,6 +116,16 @@
         Save to File
       </ion-checkbox>
     </ion-item>
+
+    <ion-item>
+      <ion-checkbox
+        [(ngModel)]="enableAudio"
+        color="primary"
+        justify="space-between"
+      >
+        Enable Audio for Video Recording
+      </ion-checkbox>
+    </ion-item>
   </ion-list>
 
   <ion-button (click)="startCamera()" expand="block">
